{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 21,
  "lineage": "92338853-3968-f307-c2e4-430f6560eee3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-009f1d49b2027f3fb",
            "domain": "vpc",
            "id": "eipalloc-027cae695f38b8bac",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-01b68ffd0385e4b7b",
            "private_dns": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-109-142-156.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.142.156",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.webserver-nic",
            "aws_security_group.SG",
            "aws_subnet.MY-VPC-subnet",
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MyVM1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04bde106886a53080",
            "arn": "arn:aws:ec2:ap-south-1:131047987852:instance/i-0f52e286c8ca9d418",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f52e286c8ca9d418",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyVM",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-01b68ffd0385e4b7b"
              }
            ],
            "primary_network_interface_id": "eni-01b68ffd0385e4b7b",
            "private_dns": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "3.109.142.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-051f6bf5a04e2536d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0100e0fe3d4444831",
            "tags": {
              "Name": "Web-Server"
            },
            "tags_all": {
              "Name": "Web-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08594418a43c71ae8"
            ]
          },
          "dependencies": [
            "aws_network_interface.webserver-nic",
            "aws_security_group.SG",
            "aws_subnet.MY-VPC-subnet",
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:131047987852:internet-gateway/igw-05c27f0c7937e2b87",
            "id": "igw-05c27f0c7937e2b87",
            "owner_id": "131047987852",
            "vpc_id": "vpc-0469f507a87dd5357"
          },
          "dependencies": [
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "webserver-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-01b68ffd0385e4b7b",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "0a:87:3e:34:5d:04",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-08594418a43c71ae8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0100e0fe3d4444831"
          },
          "dependencies": [
            "aws_security_group.SG",
            "aws_subnet.MY-VPC-subnet",
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:131047987852:route-table/rtb-06dfd1dfc925ea7fe",
            "id": "rtb-06dfd1dfc925ea7fe",
            "owner_id": "131047987852",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c27f0c7937e2b87",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c27f0c7937e2b87",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0469f507a87dd5357"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfeeca4c83e3c907",
            "route_table_id": "rtb-06dfd1dfc925ea7fe",
            "subnet_id": "subnet-0100e0fe3d4444831"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.MY-VPC-subnet",
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:131047987852:security-group/sg-08594418a43c71ae8",
            "description": "Allow Web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08594418a43c71ae8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "WEB-SERVER",
            "name_prefix": "",
            "owner_id": "131047987852",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Wer-server-SG"
            },
            "tags_all": {
              "Name": "Wer-server-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0469f507a87dd5357"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MY-VPC-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:131047987852:subnet/subnet-0100e0fe3d4444831",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0100e0fe3d4444831",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131047987852",
            "tags": {
              "Name": "PROD-subnet"
            },
            "tags_all": {
              "Name": "PROD-subnet"
            },
            "vpc_id": "vpc-0469f507a87dd5357"
          },
          "dependencies": [
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MY-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:131047987852:vpc/vpc-0469f507a87dd5357",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03c5eb2ee0354430f",
            "default_route_table_id": "rtb-024b5d24e6d264564",
            "default_security_group_id": "sg-0160a2c95e5fafab5",
            "dhcp_options_id": "dopt-dc6ab0b7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0469f507a87dd5357",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-024b5d24e6d264564",
            "owner_id": "131047987852",
            "tags": {
              "Name": "PROD"
            },
            "tags_all": {
              "Name": "PROD"
            }
          }
        }
      ]
    }
  ]
}